--- a/app/views/deals/_body_most_elec.html.erb
+++ b/app/views/deals/_body_most_elec.html.erb
@@ -25,77 +25,51 @@
 
 
 <!-- Categories : 30k, 20k, 10k, 5k, 1k -->
-<div class="filter-node editors_box" data-filter='["5k","Cali White ACTIVATED CHARCOAL & ORGANIC COCONUT OIL TEETH WHITENING TOOTHPASTE"]'>
-  <a target="_blank" href="https://amzn.to/31wtoCa"><img src="https://images-na.ssl-images-amazon.com/images/I/71nFRyRtOYL._SX522_.jpg" alt="Cali White ACTIVATED CHARCOAL"></a>
-  <div class="rating"><p>7K + Amazon Reviews</p></div>
+
+<div class="filter-node editors_box" data-filter='["20k","Mpow 059 Bluetooth Headphones Over Ear, Hi-Fi Stereo Wireless Headset, Foldable, Soft Memory-Protein Earmuffs"]'>
+  <a target="_blank" href="https://amzn.to/2KpYwgQ"><img src="https://images-na.ssl-images-amazon.com/images/I/61S3vMe2vgL._SX522_.jpg" alt="IAMGE_DESC"></a>
+  <div class="rating"><p>20K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/31wtoCa">Cali White ACTIVATED CHARCOAL & ORGANIC COCONUT OIL TEETH WHITENING TOOTHPASTE,...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2KpYwgQ">Mpow 059 Bluetooth Headphones Over Ear, Hi-Fi Stereo Wireless Headset,...</a></p>
   </div>
   <div class="pricing">
-    <span>$9.46</span>
-    <span class="sec_pricing"><div class="line_style">$19.99</div><em>53% off</em></span>
+    <span>$34.99</span>
   </div>
-  <div class="btn"><a target="_blank" href="https://amzn.to/31wtoCa">Shop Now</a></div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2KpYwgQ">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["10k","Coop Home Goods - Premium Adjustable Loft Pillow - Hypoallergenic Cross-Cut Memory Foam Fill"]'>
-  <a target="_blank" href="https://amzn.to/2KuSLi9"><img src="https://images-na.ssl-images-amazon.com/images/I/61ur0tW58JL._SX679_.jpg" alt="Coop Home Goods"></a>
-  <div class="rating"><p>16K + Amazon Reviews</p></div>
+<div class="filter-node editors_box" data-filter='["20k","HSI Professional Glider | Ceramic Tourmaline Ionic Flat Iron Hair Straightener | Straightens & Curls with Adjustable Temp"]'>
+  <a target="_blank" href="https://amzn.to/2KsMyDi"><img src="https://images-na.ssl-images-amazon.com/images/I/51hk-jdQACL.jpg" alt="HSI Professional Glider"></a>
+  <div class="rating"><p>28K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2KuSLi9">Coop Home Goods - Premium Adjustable Loft Pillow - Hypoallergenic Cross-Cut Memory Foam Fill...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2KsMyDi">HSI Professional Glider | Ceramic Tourmaline Ionic Flat Iron Hair Straightener...</a></p>
   </div>
   <div class="pricing">
-    <span>$59.99</span>
+    <span>$36.99</span>
   </div>
-  <div class="btn"><a target="_blank" href="https://amzn.to/2KuSLi9">Shop Now</a></div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2KsMyDi">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["30k","Mellanni Bed Sheet Set - Brushed Microfiber 1800 Bedding - Wrinkle, Fade, Stain Resistant"]'>
-  <a target="_blank" href="https://amzn.to/2YZ9Ftd"><img src="https://images-na.ssl-images-amazon.com/images/I/61rjc2b68QL._SX522_.jpg" alt="Mellanni Bed Sheet Set"></a>
-  <div class="rating"><p>58K + Amazon Reviews</p></div>
+<div class="filter-node editors_box" data-filter='["30k","SENSO Bluetooth Headphones, Best Wireless Sports Earphones w/Mic IPX7 Waterproof HD Stereo Sweatproof Earbuds"]'>
+  <a target="_blank" href="https://amzn.to/2KDG6IC"><img src="https://images-na.ssl-images-amazon.com/images/I/61rlamGMpCL._SX522_.jpg" alt="SENSO Bluetooth Headphones"></a>
+  <div class="rating"><p>32K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2YZ9Ftd">Mellanni Bed Sheet Set - Brushed Microfiber 1800 Bedding - Wrinkle, Fade, Stain Resistant...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2KDG6IC">SENSO Bluetooth Headphones, Best Wireless Sports Earphones w/Mic IPX7 Waterproof HD...</a></p>
   </div>
   <div class="pricing">
-    <span>$24.97</span>
+    <span>$19.94</span>
   </div>
-  <div class="btn"><a target="_blank" href="https://amzn.to/2YZ9Ftd">Shop Now</a></div>
-</div>
-
-<div class="filter-node editors_box" data-filter='["10k","Baebody Eye Gel for Appearance of Dark Circles, Puffiness, Wrinkles and Bags"]'>
-  <a target="_blank" href="https://amzn.to/2YJ3G0j"><img src="https://images-na.ssl-images-amazon.com/images/I/71i-3AIeXcL._SY679_.jpg" alt="Baebody Eye Gel"></a>
-  <div class="rating"><p>14K + Amazon Reviews</p></div>
-  <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2YJ3G0j">Baebody Eye Gel for Appearance of Dark Circles, Puffiness, Wrinkles and Bags...</a></p>
-  </div>
-  <div class="pricing">
-    <span>$24.95</span>
-  </div>
-  <div class="btn"><a target="_blank" href="https://amzn.to/2YJ3G0j">Shop Now</a></div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2KDG6IC">Shop Now</a></div>
 </div>
 
 <div class="filter-node editors_box" data-filter='["30k","Infant Optics DXR-8 Video Baby Monitor with Interchangeable Optical Lens"]'>
   <a target="_blank" href="https://amzn.to/31AO0ZQ"><img src="https://images-na.ssl-images-amazon.com/images/I/61TfCqsL6SL._SX522_.jpg" alt="Infant Optics DXR-8 Video Baby Monitor"></a>
   <div class="rating"><p>31K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/31AO0ZQ">Infant Optics DXR-8 Video Baby Monitor with Interchangeable Optical Lens</a></p>
+    <p><a target="_blank" href="https://amzn.to/31AO0ZQ">Infant Optics DXR-8 Video Baby Monitor with Interchangeable...</a></p>
   </div>
   <div class="pricing">
     <span>$165.00</span>
   </div>
   <div class="btn"><a target="_blank" href="https://amzn.to/31AO0ZQ">Shop Now</a></div>
 </div>
-
-<div class="filter-node editors_box" data-filter='["5k","SCOSCHE MAG12VB MagicMount Magnetic Phone/GPS Power Outlet Mount for the Car in Frustration Free Packaging"]'>
-  <a target="_blank" href="https://amzn.to/2KsZZmU"><img src="https://images-na.ssl-images-amazon.com/images/I/61uBBnFWCYL._SX679_.jpg" alt="SCOSCHE Magnetic Phone/GPS Power Outlet Mount"></a>
-  <div class="rating"><p>5K + Amazon Reviews</p></div>
-  <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2KsZZmU">SCOSCHE MAG12VB MagicMount Magnetic Phone/GPS Power Outlet Mount for the Car in Frustration Free Packaging</a></p>
-  </div>
-  <div class="pricing">
-    <span>$15.79</span>
-    <span class="sec_pricing"><div class="line_style">$25.83</div><em>29% off</em></span>
-  </div>
-  <div class="btn"><a target="_blank" href="https://amzn.to/2KsZZmU">Shop Now</a></div>
-</div>
-
