--- a/app/views/deals/_body_most_reviewed.html.erb
+++ b/app/views/deals/_body_most_reviewed.html.erb
@@ -29,7 +29,7 @@
   <a target="_blank" href="https://amzn.to/31wtoCa"><img src="https://images-na.ssl-images-amazon.com/images/I/71nFRyRtOYL._SX522_.jpg" alt="Cali White ACTIVATED CHARCOAL"></a>
   <div class="rating"><p>7K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/31wtoCa">Cali White ACTIVATED CHARCOAL & ORGANIC COCONUT OIL TEETH WHITENING TOOTHPASTE,...</a></p>
+    <p><a target="_blank" href="https://amzn.to/31wtoCa">Cali White ACTIVATED CHARCOAL & ORGANIC COCONUT OIL TEETH,...</a></p>
   </div>
   <div class="pricing">
     <span>$9.46</span>
@@ -42,7 +42,7 @@
   <a target="_blank" href="https://amzn.to/2KuSLi9"><img src="https://images-na.ssl-images-amazon.com/images/I/61ur0tW58JL._SX679_.jpg" alt="Coop Home Goods"></a>
   <div class="rating"><p>16K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2KuSLi9">Coop Home Goods - Premium Adjustable Loft Pillow - Hypoallergenic Cross-Cut Memory Foam Fill...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2KuSLi9">Coop Home Goods - Premium Adjustable Loft Pillow - Hypoallergenic Cross-Cut...</a></p>
   </div>
   <div class="pricing">
     <span>$59.99</span>
@@ -54,7 +54,7 @@
   <a target="_blank" href="https://amzn.to/2YZ9Ftd"><img src="https://images-na.ssl-images-amazon.com/images/I/61rjc2b68QL._SX522_.jpg" alt="Mellanni Bed Sheet Set"></a>
   <div class="rating"><p>58K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2YZ9Ftd">Mellanni Bed Sheet Set - Brushed Microfiber 1800 Bedding - Wrinkle, Fade, Stain Resistant...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2YZ9Ftd">Mellanni Bed Sheet Set - Brushed Microfiber 1800 Bedding - Wrinkle, Fade, Stain...</a></p>
   </div>
   <div class="pricing">
     <span>$24.97</span>
@@ -78,7 +78,7 @@
   <a target="_blank" href="https://amzn.to/31AO0ZQ"><img src="https://images-na.ssl-images-amazon.com/images/I/61TfCqsL6SL._SX522_.jpg" alt="Infant Optics DXR-8 Video Baby Monitor"></a>
   <div class="rating"><p>31K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/31AO0ZQ">Infant Optics DXR-8 Video Baby Monitor with Interchangeable Optical Lens</a></p>
+    <p><a target="_blank" href="https://amzn.to/31AO0ZQ">Infant Optics DXR-8 Video Baby Monitor with Interchangeable...</a></p>
   </div>
   <div class="pricing">
     <span>$165.00</span>
@@ -90,7 +90,7 @@
   <a target="_blank" href="https://amzn.to/2KsZZmU"><img src="https://images-na.ssl-images-amazon.com/images/I/61uBBnFWCYL._SX679_.jpg" alt="SCOSCHE Magnetic Phone/GPS Power Outlet Mount"></a>
   <div class="rating"><p>5K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2KsZZmU">SCOSCHE MAG12VB MagicMount Magnetic Phone/GPS Power Outlet Mount for the Car in Frustration Free Packaging</a></p>
+    <p><a target="_blank" href="https://amzn.to/2KsZZmU">SCOSCHE MAG12VB MagicMount Magnetic Phone/GPS Power Outlet...</a></p>
   </div>
   <div class="pricing">
     <span>$15.79</span>
@@ -116,7 +116,7 @@
   <a target="_blank" href="https://amzn.to/2YHcHqT"><img src="https://images-na.ssl-images-amazon.com/images/I/51bnQ0FC01L.jpg" alt="VideoSecu ML531BE TV Wall Mount"></a>
   <div class="rating"><p>27K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2YHcHqT">VideoSecu ML531BE TV Wall Mount for Most 27"-55" LED LCD Plasma Flat Screen Monitor up to 88 lb VESA 400x400...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2YHcHqT">VideoSecu ML531BE TV Wall Mount for Most 27"-55" LED LCD Plasma Flat Screen Monitor up...</a></p>
   </div>
   <div class="pricing">
     <span>$26.99</span>
@@ -153,7 +153,7 @@
   <a target="_blank" href="https://amzn.to/31yJtrc"><img src="https://images-na.ssl-images-amazon.com/images/I/517RIehPT-L._SX522_.jpg" alt="IAMGE_DESC"></a>
   <div class="rating"><p>58K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/31yJtrc">Mellanni Bed Sheet Set - Brushed Microfiber 1800 Bedding - Wrinkle, Fade, Stain Resistant - Hypoallergenic</a></p>
+    <p><a target="_blank" href="https://amzn.to/31yJtrc">Mellanni Bed Sheet Set - Brushed Microfiber 1800 Bedding - Wrinkle, Fade, Stain...</a></p>
   </div>
   <div class="pricing">
     <span>$24.70</span>
@@ -199,7 +199,7 @@
   <a target="_blank" href="https://amzn.to/2KDG6IC"><img src="https://images-na.ssl-images-amazon.com/images/I/61rlamGMpCL._SX522_.jpg" alt="SENSO Bluetooth Headphones"></a>
   <div class="rating"><p>32K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2KDG6IC">SENSO Bluetooth Headphones, Best Wireless Sports Earphones w/Mic IPX7 Waterproof HD Stereo Sweatproof Earbuds...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2KDG6IC">SENSO Bluetooth Headphones, Best Wireless Sports Earphones w/Mic IPX7 Waterproof HD...</a></p>
   </div>
   <div class="pricing">
     <span>$19.94</span>
@@ -211,7 +211,7 @@
   <a target="_blank" href="https://amzn.to/2KsMyDi"><img src="https://images-na.ssl-images-amazon.com/images/I/51hk-jdQACL.jpg" alt="HSI Professional Glider"></a>
   <div class="rating"><p>28K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2KsMyDi">HSI Professional Glider | Ceramic Tourmaline Ionic Flat Iron Hair Straightener | Straightens & Curls with Adjustable Temp...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2KsMyDi">HSI Professional Glider | Ceramic Tourmaline Ionic Flat Iron Hair Straightener...</a></p>
   </div>
   <div class="pricing">
     <span>$36.99</span>
@@ -223,7 +223,7 @@
   <a target="_blank" href="https://amzn.to/31xk9lk"><img src="https://images-na.ssl-images-amazon.com/images/I/71%2Bwddp5CML._SX679_.jpg" alt="amFilm Glass Screen Protector"></a>
   <div class="rating"><p>43K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/31xk9lk">amFilm Glass Screen Protector for iPhone 8, 7, 6S, 6 (4.7")(2 Pack) Tempered Glass Screen Protector</a></p>
+    <p><a target="_blank" href="https://amzn.to/31xk9lk">amFilm Glass Screen Protector for iPhone 8, 7, 6S, 6 (4.7")(2 Pack) Tempered Glass Screen...</a></p>
   </div>
   <div class="pricing">
     <span>$5.99</span>
@@ -235,7 +235,7 @@
   <a target="_blank" href="https://amzn.to/2Ks3FFg"><img src="https://images-na.ssl-images-amazon.com/images/I/71-J5Yx91EL._SX522_.jpg" alt="San Francisco Bay OneCup"></a>
   <div class="rating"><p>20K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2Ks3FFg">San Francisco Bay OneCup, French Roast, Single Serve Coffee K-Cup Pods (80 Count) Keurig Compatible</a></p>
+    <p><a target="_blank" href="https://amzn.to/2Ks3FFg">San Francisco Bay OneCup, French Roast, Single Serve Coffee K-Cup Pods (80 Count)...</a></p>
   </div>
   <div class="pricing">
     <span>$34.49</span>
@@ -247,7 +247,7 @@
   <a target="_blank" href="https://amzn.to/2KpYwgQ"><img src="https://images-na.ssl-images-amazon.com/images/I/61S3vMe2vgL._SX522_.jpg" alt="IAMGE_DESC"></a>
   <div class="rating"><p>20K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2KpYwgQ">Mpow 059 Bluetooth Headphones Over Ear, Hi-Fi Stereo Wireless Headset, Foldable, Soft Memory-Protein Earmuffs,...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2KpYwgQ">Mpow 059 Bluetooth Headphones Over Ear, Hi-Fi Stereo Wireless Headset,...</a></p>
   </div>
   <div class="pricing">
     <span>$34.99</span>
@@ -259,7 +259,7 @@
   <a target="_blank" href="https://amzn.to/2Ktph49"><img src="https://images-na.ssl-images-amazon.com/images/I/71OxgUzWHGL._SX679_.jpg" alt="IAMGE_DESC"></a>
   <div class="rating"><p>5K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2Ktph49">JavaPresse Manual Coffee Grinder with Adjustable Setting - Conical Burr Mill & Brushed Stainless Steel - Burr Coffee Grinder...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2Ktph49">JavaPresse Manual Coffee Grinder with Adjustable Setting - Conical Burr Mill & Brushed...</a></p>
   </div>
   <div class="pricing">
     <span>$23.99</span>
@@ -271,7 +271,7 @@
   <a target="_blank" href="https://amzn.to/31FrMpZ"><img src="https://images-na.ssl-images-amazon.com/images/I/818acppeYPL._SX522_.jpg" alt="IAMGE_DESC"></a>
   <div class="rating"><p>17k + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/31FrMpZ">Wool Dryer Balls by Smart Sheep 6-Pack, XL Premium Reusable Natural Fabric Softener</a></p>
+    <p><a target="_blank" href="https://amzn.to/31FrMpZ">Wool Dryer Balls by Smart Sheep 6-Pack, XL Premium Reusable Natural Fabric...</a></p>
   </div>
   <div class="pricing">
     <span>$16.95</span>
@@ -296,7 +296,7 @@
   <a target="_blank" href="https://amzn.to/2KpnX29"><img src="https://images-na.ssl-images-amazon.com/images/I/71AYy5KAqmL._SX679_.jpg" alt="Instant Pot"></a>
   <div class="rating"><p>34K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/2KpnX29">Instant Pot DUO60 6 Qt 7-in-1 Multi-Use Programmable Pressure Cooker, Slow Cooker, Rice Cooker, Steamer, Sauté,...</a></p>
+    <p><a target="_blank" href="https://amzn.to/2KpnX29">Instant Pot DUO60 6 Qt 7-in-1 Multi-Use Programmable Pressure Cooker, Slow Cooker,...</a></p>
   </div>
   <div class="pricing">
     <span>$79.95</span>
@@ -309,7 +309,7 @@
   <a target="_blank" href="https://amzn.to/31z3lKL"><img src="https://images-na.ssl-images-amazon.com/images/I/61shKFqUzSL._SX569_.jpg" alt="Portable Charger Anker PowerCore 20100mAh"></a>
   <div class="rating"><p>15K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/31z3lKL">Portable Charger Anker PowerCore 20100mAh - Ultra High Capacity Power Bank with 4.8A Outputand and PowerIQ Technology, ...</a></p>
+    <p><a target="_blank" href="https://amzn.to/31z3lKL">Portable Charger Anker PowerCore 20100mAh - Ultra High Capacity Power Bank...</a></p>
   </div>
   <div class="pricing">
     <span>$49.99</span>
@@ -321,7 +321,7 @@
   <a target="_blank" href="https://amzn.to/31suDlV"><img src="https://images-na.ssl-images-amazon.com/images/I/81UjDAhvQWL._SX679_.jpg" alt="Dash Rapid Egg Cooker"></a>
   <div class="rating"><p>7k + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="https://amzn.to/31suDlV">Dash Rapid Egg Cooker: 6 Egg Capacity Electric Egg Cooker for Hard Boiled Eggs, Poached Eggs, Scrambled Eggs, or Omelets...</a></p>
+    <p><a target="_blank" href="https://amzn.to/31suDlV">Dash Rapid Egg Cooker: 6 Egg Capacity Electric Egg Cooker for Hard Boiled Eggs, Poached...</a></p>
   </div>
   <div class="pricing">
     <span>$19.97</span>
