--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -447,13 +447,5 @@ header .gnb_m,header .gnb_open2{display:none;}
   .contact_form{width:100%;margin:70px 0 0 0;}
 }
   
-/* Amazon Search */
+/* Amazon Search3 */
 div#amzn-native-ad-0 .amzn-native-header{display:none;}
-
-
-
-
-
-
-
-
