--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -397,9 +397,9 @@
 .editors_pick .editors_box{float:left;width:18%;margin:0 1% 5% 1%;height:400px;}
 .editors_pick .editors_box img{width:100%;height:200px;object-fit:contain;padding:15px;}
 .editors_pick .editors_box .rating img{height:16px;padding:0;}
-.editors_pick .editors_box .rating p{text-align:center;font-size:13px;margin-top:-10px;}
+.editors_pick .editors_box .rating p{text-align:center;font-size:13px;margin-top:-10px;color:#08f;}
 .editors_pick .editors_box .inner{padding:7px;}
-.editors_pick .editors_box .inner p{line-height:1.3;height:3.9em;overflow:hidden;}
+.editors_pick .editors_box .inner p{line-height:1.3;height:3.9em;overflow:hidden;font-size:12.5px;}
 .editors_pick .editors_box .inner p a{text-decoration:none;color:#000;}
 .editors_pick .editors_box .pricing{margin:10px 0;padding:7px;color:#000;}
 .editors_pick .editors_box .pricing span{font-size:15px;}
@@ -425,10 +425,15 @@
 @media screen and (max-width:400px){
   .editors .editor_mobile .guide_controll .btn{font-size:14px;}
   .editors .editor_mobile .guide_controll .more_btn{width:66px;}
-  .editors_pick .editors_box .pricing span{font-size:12px;}
+  .editors_pick .editors_box .pricing{padding:0;}
+  .editors_pick .editors_box .pricing span{font-size:11px;}
+  .editors_pick .editors_box .rating p{font-size:11px;}
+  .editors_pick .editors_box img{padding:5px;}
+
 }
 @media screen and (max-width:640px){
   .editors_pick .editors_box{float:left;width:48%;margin:0 1% 5% 1%;height:400px;}
+  .editors_pick .editors_box .inner p{font-size:10.5px;}
  
   /* Mobile */
   .editor_mobile{display:block;}
