--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -187,6 +187,7 @@
 .guide_wrap{margin:50px 0 0 0;font-family: 'Montserrat', sans-serif;} 
 .guide_wrap .mt_info{margin:-40px 0 40px 0;padding:0 10px;color:#000;}
 .guide_wrap .mt_info h2 span{color:#08f;}
+.guide_wrap .mt_info p{font-size:13px;}
 .guide_wrap .guide_box{float:left;width:31.33%;margin:0 1% 70px 1%;}
 .guide_wrap .guide_box .image{height:250px;}
 .guide_wrap .guide_box .image img{width:100%;height:100%;}
@@ -209,6 +210,7 @@
 @media screen and (max-width:640px){
   .guide_wrap .mt_info{margin-bottom:15px;padding:0 5px;}
   .guide_wrap .mt_info h2{font-size:17px;}
+  .guide_wrap .mt_info p{font-size:11px;}
   .guide_wrap .guide_boxes{margin:50px 0;border-bottom:1px solid #ccc;padding-bottom:30px;}
   .guide_wrap .guide_boxes .box_img{float:left;width:100%;margin:0%;}
   .guide_wrap .guide_boxes .box_inner{float:left;width:100%;margin:0%;border:5px solid;height:auto;}
