--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -120,7 +120,7 @@
 .show_wrap .show_box .show_inner span p{font-size:15px;font-weight:400px;}
 .show_wrap .show_box .show_inner p{margin:25px 0;font-size:20px;}
 .show_wrap .show_box .show_inner a{text-decoration:none;color:#fff;background:#000;padding:15px 30px;display:inline-block;}
-.show_wrap .show_box .show_inner a em{color:#e47911;}
+.show_wrap .show_box .show_inner a em{color:#e47911;text-transform:uppercase;}
 
 .show_wrap .show_box_down{width:1000px;margin:60px auto 200px auto;}
 .show_wrap .show_box_down h2{margin:0 0 1% 1%;border-bottom:1px solid #616161;width:200px;}
