--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -9,7 +9,7 @@
     <div class="code_high">
       <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Origianl_price</span></address>
       <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>percentage% off at $Origianl_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><%= render 'deals/notes' %>
+      <p class="mobile_code"><span>Take <strong>percentage% off at $Origianl_price</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
@@ -49,6 +49,193 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="40" data-price="11.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z1pP5s"><img src="https://m.media-amazon.com/images/I/61wJTwfjghL._SR400,400_.jpg" alt="Bluetooth Headphones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z1pP5s">Bluetooth Headphones, HSPRO Wireless Earbuds, IPX7 Waterproof Sports Headphones Bluetooth Earbuds, CVC6.0 Noise Cancelling Wireless...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.39</span><span class="ori_price">$18.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">40P24M94</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $18.99</strong> with promo code: <strong class="m_codes">40P24M94</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 17, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Z1pP5s">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="16.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31HjkXf"><img src="https://m.media-amazon.com/images/I/61nhKWV5GQL._SR400,400_.jpg" alt="Bluetooth Headphones WEILIGU Wireless Earbuds" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31HjkXf">Bluetooth Headphones WEILIGU Wireless Earbuds Waterproof Sweatproof Sports HD Stereo Noise Cancelling Headphones</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.19</span><span class="ori_price">$26.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">40OL3G2A</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $26.99</strong> with promo code: <strong class="m_codes">40OL3G2A</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 16, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31HjkXf">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YZU1hf"><img src="https://m.media-amazon.com/images/I/819eq1B+NIL._SR400,400_.jpg" alt="WORKPRO W009029A 176 -Pieces Tool Set" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YZU1hf">WORKPRO W009029A 176 -Pieces Tool Set With Tool Trolley Bag, Chrome-vanadium Steel Home Tool Set</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$49.99</span><span class="ori_price">$99.99</span></address>
+      <textarea readonly="readonly" class="code_area">506JMW8V</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $99.99</strong> with promo code: <strong class="m_codes">506JMW8V</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YZU1hf">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="68" data-price="17.60">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YYXlcw"><img src="https://m.media-amazon.com/images/I/61aLuDvQ3ML._SR400,400_.jpg" alt="AINOPE Handheld Vacuum" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>68% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YYXlcw">AINOPE Handheld Vacuum, Vacuum Cleaner Cordless [6Kpa Powerful Suction & LED Light] Battery Powerful with Quick Charge,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.60</span><span class="ori_price">$54.99</span></address>
+      <textarea readonly="readonly" class="code_area">68QW54EV</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>68% off at $54.99</strong> with promo code: <strong class="m_codes">68QW54EV</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YYXlcw">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="70" data-price="7.80">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z5MygN"><img src="https://m.media-amazon.com/images/I/61z-yaJhLOL._SR400,400_.jpg" alt="Hausbell Waist Trimmer" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z5MygN">Hausbell Waist Trimmer, Adjustable Sweat Belt for Man and Women, Waist Trainer for Weight Loss and Stomach Fat Burner</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.80</span><span class="ori_price">$25.99</span></address>
+      <textarea readonly="readonly" class="code_area">70KR2L8K</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $25.99</strong> with promo code: <strong class="m_codes">70KR2L8K</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Z5MygN">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="55" data-price="13.5">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31z7pdL"><img src="https://m.media-amazon.com/images/I/71fUTSxj3vL._SR400,400_.jpg" alt="Charging Station" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31z7pdL">Charging Station for Multiple Devices 3 in 1 Docking Station 4 USB Ports and 2 Outlet Surge Protector Power Strip Holder Fast ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.5</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">55SSSSSS</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $29.99</strong> with promo code: <strong class="m_codes">55SSSSSS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 07, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31z7pdL">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="18.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31Lcdx1"><img src="https://m.media-amazon.com/images/I/610ItRdA2lL._SR400,400_.jpg" alt="Water Flosser" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31Lcdx1">Water Flosser with 4 Models 6 Jet Tips Lmlly Portable Cordless Water Flosser Teeth Cleaner Rechargeable IPX7 Waterproof Oral ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.00</span><span class="ori_price">$35.99</span></address>
+      <textarea readonly="readonly" class="code_area">50KO7QGP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $35.99</strong> with promo code: <strong class="m_codes">50KO7QGP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 16, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31Lcdx1">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="8.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YLom7L"><img src="https://m.media-amazon.com/images/I/51UgrR08fqL._SR400,400_.jpg" alt="Eye Gel" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YLom7L">Eye Gel, QQcute Day & Night Anti-Aging Eye Treatment Cream for Wrinkle, Dark Circle, Fine Line, Puffy Eyes, Bags Best Hydrogel ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.00</span><span class="ori_price">$15.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">507FBO3Q</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $15.99</strong> with promo code: <strong class="m_codes">507FBO3Q</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 19, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YLom7L">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="7.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YIMfgg"><img src="https://m.media-amazon.com/images/I/51JXi1j-NGL._SR400,400_.jpg" alt="Schuko Germany France Travel Power Adapter" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YIMfgg">Schuko Germany France Travel Power Adapter, TESSAN European Plug with 2 USB, Outlet Adaptor for USA to Europe EU...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.00</span><span class="ori_price">$13.99</span></address>
+      <textarea readonly="readonly" class="code_area">50GV8Q4Q</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $13.99</strong> with promo code: <strong class="m_codes">50GV8Q4Q</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 24, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YIMfgg">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H4l9p8"><img src="https://m.media-amazon.com/images/I/71oUEyrVVNL._SR400,400_.jpg" alt="Wireless Bluetooth Speakers" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H4l9p8">Wireless Bluetooth Speakers Portable Bluetooth 4.2 Loud HD Stereo with 6 LED RGB Lights Modes Built-in Mic AUX Hands Free...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.99</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">40SSSSPPP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $29.99</strong> with promo code: <strong class="m_codes">40SSSSPPP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 25, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2H4l9p8">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="45" data-price="13.19">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/31Avlxk"><img src="https://m.media-amazon.com/images/I/91ea8Fc+5gL._SR400,400_.jpg" alt="Phone Camera Lens,11 in 1 Cell Phone Lens Kit" /></a>
@@ -60,7 +247,7 @@
     <div class="code_high">
       <address><span class="dis_price">$13.19</span><span class="ori_price">$23.99</span></address>
       <textarea readonly="readonly" class="code_area">45JDQ5J9</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>45% off at $23.99</strong> with promo code: <strong class="m_codes">45JDQ5J9</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 10, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+      <p class="mobile_code"><span>Take <strong>45% off at $23.99</strong> with promo code: <strong class="m_codes">45JDQ5J9</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 10, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31Avlxk">Use Code at Amazon</a></div>
@@ -80,7 +267,7 @@
       </address>
       <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">40FXQ1KU</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>40% off at $29.99</strong> with promo code: <strong class="m_codes">40FXQ1KU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+      <p class="mobile_code"><span>Take <strong>40% off at $29.99</strong> with promo code: <strong class="m_codes">40FXQ1KU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2H4w1n7">Use Code at Amazon</a></div>
