--- a/app/views/shared/_header_short.html.erb
+++ b/app/views/shared/_header_short.html.erb
@@ -8,7 +8,8 @@
      <ul class="clearfix">
       <li><a href="/categories/">CATEGORY<span>,</span></a></li>
       <li><a href="/recommends/">FEATURED<span>,</span></a></li>
-      <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li>
+      <!-- <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li> -->
+      <li><a href="/deals/promo_codes">DEALS <em>of Amazon</em></a></li>
      </ul>      
    </div>
   </div>
@@ -30,7 +31,8 @@
         <li><a href="/">HOME<span>,</span></a></li> 
         <li><a href="/categories/">CATEGORY<span>,</span></a></li>
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
-        <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li>
+        <!-- <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li> -->
+        <li><a href="/deals/promo_codes">DEALS <em>of Amazon</em></a></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="모바일 메뉴 닫기" /></button>
       
