--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -112,6 +112,4 @@
 </div>
 
 
-<script>
- <%= render(:partial => 'codes', :handlers => [:erb], :formats => [:js]) %>
-</script>
+<script><%= render(:partial => 'codes', :handlers => [:erb], :formats => [:js]) %></script>
