--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -2,6 +2,7 @@
 @media screen and (min-width:640px){
   .codes{}
   .codes .lt_cnt .toggle{margin-top:10px;}
+  .codes .lt_cnt .qs_mobile{display:none;}
   .codes .lt_cnt .toggle>ul{}
   .codes .lt_cnt .toggle>ul>li{padding:8px 0;border-bottom:1px solid #3d3d3d;background:url(<%=asset_path 'toggle_show_btn.png' %>) top 10px right 10px no-repeat;}
   .codes .lt_cnt .toggle>ul>li.on{border-bottom:1px solid #3d3d3d;background:url(<%=asset_path 'toggle_hide_btn.png' %>) top 12px right 10px no-repeat;}
@@ -115,12 +116,13 @@
   .codes .lt_cnt .toggle{margin-top:10px;}
   .codes .lt_cnt .toggle>ul>li{padding:8px 0;border-bottom:1px solid #3d3d3d;background:url(<%=asset_path 'toggle_show_btn.png' %>) top 10px right 10px no-repeat;}
   .codes .lt_cnt .toggle>ul>li.on{border-bottom:1px solid #3d3d3d;background:url(<%=asset_path 'toggle_hide_btn.png' %>) top 12px right 10px no-repeat;}
-  .codes .lt_cnt .toggle>ul>li>a{text-decoration:none;color:#000;display:block;}
+  .codes .lt_cnt .toggle>ul>li>a{text-decoration:none;color:#000;display:block;margin-top:5px;}
   .codes .lt_cnt .toggle>ul>li>ul{display:none;/*list-style:decimal;*/padding:10px 20px;}
   .codes .lt_cnt .toggle>ul>li>ul>li{list-style:decimal;margin-bottom:7px;}
   .codes .lt_cnt .toggle>ul>li>ul>li>a{text-decoration:none;color:#fff;display:block;padding:5px 15px;background:#08f;margin:5px;border-radius:10px;}
   .codes .lt_cnt .toggle>ul>.bestdeals>ul>li>a{background:#87c442;}
   .codes .lt_cnt .last7days_pc{display:none;}
+  .common_layout .lt_cnt .qs_pc{display:none;}
 
   .codes .most_categories .toggle>ul>li{width:100%;font-family: 'Anton', sans-serif;}
   .codes .most_categories .toggle>ul>li>a{font-size:20px;font-weight:bold;margin-top:-3px;}
@@ -440,6 +442,7 @@
   .editors .editor_mobile .filter-search{margin:0;padding-bottom:7px;}
   .editors .editor_mobile button.btn-md{margin-top:10px;text-align:left;}
   .editors .editor_mobile button.all{margin-left:15px;}
+  .editors .editor_mobile button.promo_btn{font-size:14.4px;}
   .editors .editor_mobile .dropmenu .btn{letter-spacing:0;}
   .editors .editor_mobile .dropmenu{width:100px;}
   .editors .editor_mobile .dropmenu ul{margin-top:13px;} 
