--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -427,10 +427,12 @@
 @media screen and (max-width:400px){
   .editors .editor_mobile .guide_controll .btn{font-size:14px;}
   .editors .editor_mobile .guide_controll .more_btn{width:66px;}
+  .editors .editor_mobile .guide_controll button.promo_btn{font-size:13px;letter-spacing:0;}
   .editors_pick .editors_box .pricing{padding:0;}
   .editors_pick .editors_box .pricing span{font-size:11px;}
   .editors_pick .editors_box .rating p{font-size:11px;}
   .editors_pick .editors_box img{padding:5px;}
+
 
 }
 @media screen and (max-width:640px){
