--- a/app/views/deals/_navbar_promotion.html.erb
+++ b/app/views/deals/_navbar_promotion.html.erb
@@ -17,7 +17,7 @@
       <button class="filter-button btn btn-md white-text promo_btn " data-filter="coupons">Coupons</button>
       <button class="filter-button btn btn-md promo_btn " data-filter="sales">Sales & Offers</button>
       
-      <ul class="dropmenu filter-button btn more_btn promo_btn">
+      <ul class="dropmenu filter-button btn more_btn">
         <li class="dir"><a href="#">More</a>
           <ul>
             <li><button class="filter-button btn btn-md promo_btn" data-filter="promotions">Promotions</button></li>
