--- a/app/views/deals/_body_most_reviewed.html.erb
+++ b/app/views/deals/_body_most_reviewed.html.erb
@@ -5,8 +5,7 @@
     <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
   </div>
   <div class="pricing">
-    <span>$CURRENT_PRICE</span>
-    <span class="sec_pricing"><div class="line_style">$REGULAR_PRICE</div><em>PERCENTAGE% off</em></span>
+    <span>$CURRENT_PRICE</span><span class="sec_pricing"><div class="line_style">$REGULAR_PRICE</div><em>PERCENTAGE% off</em></span>
   </div>
   <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
 </div> -->
@@ -25,6 +24,70 @@
 
 
 <!-- Categories : 30k, 20k, 10k, 5k, 1k -->
+<div class="filter-node editors_box" data-filter='["10k","NoCry Cut Resistant Gloves - High Performance Level 5 Protection, Food Grade"]'>
+  <a target="_blank" href="https://amzn.to/2KxWICu"><img src="https://images-na.ssl-images-amazon.com/images/I/A1TFswGQ9VL._SX522_.jpg" alt="IAMGE_DESC"></a>
+  <div class="rating"><p>10K + Amazon Reviews</p></div>
+  <div class="node-box inner">
+    <p><a target="_blank" href="https://amzn.to/2KxWICu">NoCry Cut Resistant Gloves - High Performance Level 5 Protection, Food Grade....</a></p>
+  </div>
+  <div class="pricing">
+    <span>$10.99</span>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2KxWICu">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box" data-filter='["10k","Portable Charger RAVPower 16750mAh Power Bank, Time-Tested USB Battery Pack..."]'>
+  <a target="_blank" href="https://www.amazon.com/gp/product/B00MQSMEEE?ie=UTF8&tag=bustle-13043703-20&camp=1789&linkCode=xm2&creativeASIN=B00MQSMEEE"><img src="https://images-na.ssl-images-amazon.com/images/I/515yeyx5FcL._SX679_.jpg" alt="IAMGE_DESC"></a>
+  <div class="rating"><p>10K + Amazon Reviews</p></div>
+  <div class="node-box inner">
+    <p><a target="_blank" href="https://www.amazon.com/gp/product/B00MQSMEEE?ie=UTF8&tag=bustle-13043703-20&camp=1789&linkCode=xm2&creativeASIN=B00MQSMEEE">Portable Charger RAVPower 16750mAh Power Bank, Time-Tested USB Battery Pack...</a></p>
+  </div>
+  <div class="pricing">
+    <span>$29.99</span>
+    <span class="sec_pricing"><div class="line_style">$33.99</div><em>123% off</em></span>
+  </div>
+  <div class="btn"><a target="_blank" href="https://www.amazon.com/gp/product/B00MQSMEEE?ie=UTF8&tag=bustle-13043703-20&camp=1789&linkCode=xm2&creativeASIN=B00MQSMEEE">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
+  <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
+  <div class="rating"><p>REVIEWS_NUMBER + Amazon Reviews</p></div>
+  <div class="node-box inner">
+    <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
+  </div>
+  <div class="pricing">
+    <span>$CURRENT_PRICE</span>
+    <span class="sec_pricing"><div class="line_style">$REGULAR_PRICE</div><em>PERCENTAGE% off</em></span>
+  </div>
+  <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
+  <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
+  <div class="rating"><p>REVIEWS_NUMBER + Amazon Reviews</p></div>
+  <div class="node-box inner">
+    <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
+  </div>
+  <div class="pricing">
+    <span>$CURRENT_PRICE</span>
+    <span class="sec_pricing"><div class="line_style">$REGULAR_PRICE</div><em>PERCENTAGE% off</em></span>
+  </div>
+  <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
+  <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
+  <div class="rating"><p>REVIEWS_NUMBER + Amazon Reviews</p></div>
+  <div class="node-box inner">
+    <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
+  </div>
+  <div class="pricing">
+    <span>$CURRENT_PRICE</span>
+    <span class="sec_pricing"><div class="line_style">$REGULAR_PRICE</div><em>PERCENTAGE% off</em></span>
+  </div>
+  <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
+</div>
+
 <div class="filter-node editors_box" data-filter='["5k","Cali White ACTIVATED CHARCOAL & ORGANIC COCONUT OIL TEETH WHITENING TOOTHPASTE"]'>
   <a target="_blank" href="https://amzn.to/31wtoCa"><img src="https://images-na.ssl-images-amazon.com/images/I/71nFRyRtOYL._SX522_.jpg" alt="Cali White ACTIVATED CHARCOAL"></a>
   <div class="rating"><p>7K + Amazon Reviews</p></div>
@@ -93,8 +156,7 @@
     <p><a target="_blank" href="https://amzn.to/2KsZZmU">SCOSCHE MAG12VB MagicMount Magnetic Phone/GPS Power Outlet...</a></p>
   </div>
   <div class="pricing">
-    <span>$15.79</span>
-    <span class="sec_pricing"><div class="line_style">$25.83</div><em>29% off</em></span>
+    <span>$15.79</span><span class="sec_pricing"><div class="line_style">$25.83</div><em>29% off</em></span>
   </div>
   <div class="btn"><a target="_blank" href="https://amzn.to/2KsZZmU">Shop Now</a></div>
 </div>
